--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="../static/style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
         <script src="../static/chat.js" defer> </script>
         <title>AFTER LIFE</title>
     </head>
