--- a/static/style.css
+++ b/static/style.css
@@ -2,50 +2,51 @@ body {
     background-image: url('./img/cat-4876360_1920.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;
+    background-position-x: center;
+    margin: 0; 
 }
 
 .chat-container {
-    width: 500px;
-    height: 300px;
-    background-color: #f0f0f0;
-    margin: 0 auto;
+    background-color: #575757fb;
+    margin: 0px;
     margin-top: 300px;
-    padding: 10px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    border: 10px solid #2f3338;
+    border-radius: 20px;
 }
 
 .content {
-    margin: auto;
+    height: 400px;
+    margin: 4px;
+    margin-bottom: 0px;
+    overflow-x: hidden;
     overflow-y: scroll;
-    width: 450px;
-    height: calc(100%);
-    max-height: calc(87%);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 900;
+    font-family:Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .footer {
+    border-top: 5px solid #2f3338;
     display: flex;
-    justify-content: space-between; /* Align items to the end (bottom) of the container */
+    justify-content: space-between;
     align-items: center;
-    background-color: #2f3338; /* Example background color */
-    border-top: 1px solid #ccc; /* Optional border between content and footer */
-    border-radius: 20px;
+    background-color: #2f3338;
 }
 
 .footer input[type="text"],
 .footer button {
-    flex: 4; /* Allow the items to grow equally to fill the available space */
-    padding: 3px;
-    margin-top: 4px; /* Optional margin between the items */
-    margin-bottom: 4px;
+    flex: 4;
+    height: 30px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     margin-left: 15px;
-    box-sizing: border-box;
-    /* Include padding and border in the total width */
 }
 
 .footer button {
     flex: 1;
     padding: 3px;
     margin-right: 15px;
-    box-sizing: border-box;
 }
