--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="../static/style.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script> -->
         <script src="../static/chat.js" defer> </script>
         <title>AFTER LIFE</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+        <link rel="icon" type="image/png" href="../static/img/icons8-katze-16.png">
     </head>
     <body>
 
@@ -28,7 +28,7 @@
             </div>
         </nav>
 
-        <div class="container">
+        <div class="container" style="align-items: center;">
             <div class="chat-container">
                 <div class="content">
                     <p id="messages"></p>
@@ -36,7 +36,7 @@
     
                 <div class="footer">
                     <input type="text" id="messageInput">
-                    <button onkeydown="enter" onclick="sendMessage()" type="button" class="btn btn-primary">Send</button>
+                    <button onkeydown="enter" type="button" class="btn btn-primary" id="sendbutton">Send</button>
                 </div>
             </div>
         </div>
